tests/test_assets/semantic/invalid/enums/type_used_as_value.cog
Color :: enum {
    Red,
}

value: Color = Color;