tests/test_assets/semantic/invalid/enums/type_used_as_value.expected
semantic error at line 5: type name cannot be used as a value 'Color'
1 semantic error generated.
